# sdcc-stdlib

./: .gitignore  .gitmodules
STM8S_SPL/: Build.sh  CMakeCache.txt  CMakeLists.txt  Makefile  REMOTE_CONTROL.txt  STM8S_SPL.config  STM8S_SPL.files  STM8S_SPL.ihx  STM8S_SPL.includes  STM8S_SPL.lk  STM8S_SPL.map  adc.c  adc.h  blinky.c  cmake_install.cmake  common.h  fhss.h  led.h  main.c  nrf24.c  nrf24.h  print.c  print.h  pwm.c  pwm.h  readme.txt  rx.c  serial.c  serial.h  spi.c  spi.h  stm8s_conf.h  timer4.c  timer4.h  tx.c  utility.c  utility.h
STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/inc/: stm8s.h
STM8S_StdPeriph_Lib/Libraries/STM8S_StdPeriph_Driver/src/: stm8s_clk.c  stm8s_flash.c
cmake/: sdcc-generic.cmake
